<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ValveError" Id="{d5d9f41d-2cd6-4f26-8502-e4fb59c52fbb}">
    <Declaration><![CDATA[TYPE ST_ValveError :
STRUCT
	bActive       : BOOL := FALSE; // Indicates active error in the valves
	nValveIndex   : INT  := 0;     // Valve index with error (1 to 5)
	nErrorID      : UDINT := 0;    // Error code returned
	sErrorMessage : STRING(80) := '';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>