<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_MCPower" Id="{b4d6b702-951d-459e-b23b-a23416a86e07}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MCPower
VAR_INPUT
    bEnable   : BOOL;      // Enable signal
    bReset    : BOOL;      // Manual reset to clear errors
END_VAR
VAR_OUTPUT
    bActive   : BOOL;      // Indicates if the motor is powered on
    bError    : BOOL;      // Indicates if there is an error
    iErrorID  : UDINT;     // Stores the error ID
	bStatus	  : BOOL;	   // MC_Power Status
END_VAR
VAR_IN_OUT
	Axis	  :	AXIS_REF;
END_VAR
VAR
    MC_PowerFB  : MC_Power;
    MC_ResetFB  : MC_Reset;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Check if the axis is already active before enabling
IF bReset THEN
    // Reset errors
    MC_ResetFB(Axis := Axis, Execute := TRUE);
    IF NOT MC_ResetFB.Busy THEN
        bError := FALSE;
        iErrorID := 0;
    END_IF;
ELSIF bEnable THEN
    // Check if already active before enabling
    IF NOT MC_PowerFB.Active THEN
        MC_PowerFB(
            Axis := Axis,
            Enable := TRUE,
            Enable_Positive := TRUE,
            Enable_Negative := TRUE,
			override := 100
        );
    END_IF;
END_IF;

// Output states
bActive := MC_PowerFB.Active;
bStatus := MC_PowerFB.Status;
bError := MC_PowerFB.Error;
iErrorID := MC_PowerFB.ErrorID;]]></ST>
    </Implementation>
    <LineIds Name="FB_MCPower">
      <LineId Id="25" Count="15" />
      <LineId Id="67" Count="0" />
      <LineId Id="41" Count="5" />
      <LineId Id="48" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>